--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,35 @@ Inicio
     <!--<h1 style="width: 400px; height: 400px; border:1px black solid; background: url('media/b.jpg') no-repeat; background-size:cover;"></h1>
     <h3>{{message}}</h3>-->
 </div>
+<div id="carouselExampleFade" class="carousel slide carousel-fade " data-ride="carousel">
+    <div class="carousel-inner text-center">
+        <div class="carousel-item active" >
+        <center>
+            <img src="/media/pantalon-nike-dri-fit-academy.jpg" class="d-block w-141" alt="banner3" width="400" height="500"  >
 
+        </center>
+        </div>
+        <div class="carousel-item ">
+        <center>
+            <img src="/media/AH7363-107_0.jpg" class="d-block w-141" alt="banner3" width="400" height="500">
+        </center>
+        </div>
+        <div class="carousel-item ">
+        <center>
+            <img src="/media/mlopez.jpeg" class="d-block w-141" alt="banner3" width="400" height="500" >
+        </center>
+
+        </div>
+    </div>
+        <button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div
 
 
 
