--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,8 @@ Inicio
     <div class="carousel-inner text-center">
         <div class="carousel-item active" >
         <center>
-            <img src="/media/pantalon-nike-dri-fit-academy.jpg" class="d-block w-141" alt="banner3" width="400" height="500"  >
-
+            <img src="/media/pantalon-nike-dri-fit-academy.jpg" class="d-block w-141" alt="banner3" width="400" height="500"
+            style="opacity: 1">
         </center>
         </div>
         <div class="carousel-item ">
@@ -32,7 +32,7 @@ Inicio
         </div>
         <div class="carousel-item ">
         <center>
-            <img src="/media/mlopez.jpeg" class="d-block w-141" alt="banner3" width="400" height="500" >
+            <img src="/media/AC2286-010_0.jpg" class="d-block w-141" alt="banner3" width="400" height="500" >
         </center>
 
         </div>
