--- a/templates/usuarios/listar_usuario.html
+++ b/templates/usuarios/listar_usuario.html
@@ -31,7 +31,7 @@
                     <td>{{ usuario.nombres }}</td>
                     <td>{{ usuario.apellidos }}</td>
                     <td>
-                        <a href="" class="btn btn-danger">Eliminar</a>
+                        <a href="http://localhost:8000/Nike/Eliminar_User/{{usuario.id}}/" class="btn btn-danger">Eliminar</a>
                         <a href="http://localhost:8000/Nike/Editar_User/{{usuario.id}}/" class="btn btn-primary">Editar</a>
                     </td>
                 </tr>
