--- a/templates/usr.html
+++ b/templates/usr.html
@@ -15,6 +15,8 @@
             <p class = "text-left"><b>Nombre: </b>{{object.nombres}}</p>
             <p class = "text-left"><b>Apellido: </b>{{object.apellidos}}</p>
             <p class = "text-left"><b>Email: </b>{{object.email}}</p>
+            <p class = "text-left"><b>Linkedin: <a href="{{object.linkedin}}" label ="asd">{{object.nombres}}</a></p>
+                <br>
             <a href="/Nike/Editar_User/{{object.id}}/" class= 'btn btn-primary'> Editar  </a>
             <a href="/Nike/Eliminar_User/{{object.id}}/" class= 'btn btn-danger'> Eliminar </a>
         </div>
