--- a/templates/accesorios_eliminar.html
+++ b/templates/accesorios_eliminar.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-    Eliminar accesorios
+    Eliminar Accesorios
 {% endblock %}
 
 {% block contenido %}
