--- a/templates/users_eliminar.html
+++ b/templates/users_eliminar.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-    Eliminar indumentarias
+    Eliminar Usuarios
 {% endblock %}
 
 {% block contenido %}
