--- a/templates/Sobre_mi.html
+++ b/templates/Sobre_mi.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         {% block titulo %}
+            Sobre Nosotros
         {% endblock %}
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
@@ -85,7 +86,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Perfil: {{request.user.username}}</a>
+                    <a class="nav-link" href="/Nike/Detalle_User/{{request.user.pk}}/">Perfil: {{request.user.username}}</a>
                 </li>
                 <li class="nav-item">
                     <img src="{{request.user.imagen.url}}" style="height: 2rem;">
