--- a/templates/indumentarias_eliminar.html
+++ b/templates/indumentarias_eliminar.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-    Eliminar indumentarias
+    Eliminar Indumentarias
 {% endblock %}
 
 {% block contenido %}
