--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+<!--esto es django-->
 {% block titulo %}
 Inicio
 {% endblock %}
@@ -15,7 +15,7 @@ Inicio
     <br>
     <br>
 </div>
-<div id="carouselExampleFade" class="carousel slide carousel-fade " data-ride="carousel">
+<!--<div id="carouselExampleFade" class="carousel slide carousel-fade " data-ride="carousel">
     <div class="carousel-inner text-center">
         <div class="carousel-item active" >
         <center>
@@ -43,6 +43,6 @@ Inicio
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
-    </div
+    </div-->
 
 {% endblock %}
