--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -11,9 +11,11 @@
             </title>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
                 integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+            <link type="text/css" href="style.css"/>
         </head>
             <br>
-        <body style="background: url('/media/fondo_nike.jpg') no-repeat; background-size:cover; top:80px;">
+        <!--<body style="background: url('/media/fondo_nike.jpg') no-repeat; background-size:cover; top:80px;">-->
+            <body style="background: rgb(204, 207, 204) no-repeat; background-size:cover; top:80px;">
             <nav class="navbar navbar-expand-lg navbar " style="background: rgb(94, 91, 91);">
                 <a class="navbar-brand" href="/" style="color:#ffffff";>
                     <img src="/media/nike.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
@@ -81,6 +83,7 @@
                     </form>
                 </div>
             </nav>
+            
             {% block contenido %}
                 <h3>{{errors}}</h3>
                 <div class="modal-dialog text-center" style="color: rgb(255, 255, 255); left:80px;top:10px;">
