--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,12 +11,13 @@
         Inicio
         {% endblock %}
     </title>
+    <link rel="stylesheet" type="text/css" href='{% static "css/estilos.css" %}'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    
 </head>
-    <br>
-<body style="background: url('/media/b.jpg') no-repeat; background-size:cover; ">
-    <nav class="navbar navbar-expand-lg navbar " style="background: rgb(109, 63, 194);">
+<body>
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="/" style="color:#ffffff";>
             <img src="/media/nike.png" alt="" width="30" height="30" class="d-inline-block align-text-top" >
             <use xlink:href="#profile"></use>
