--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,8 @@ Inicio
 
 {% block contenido %}
 <div class = "text-center">
-    <br>
-    <br>
-    <br>
-    <h1 style="font-family:Rockwell;color:#000000">Bienvenido a FalsoNike</h1>
-    <h5 style="font-family:Rockwell;color:#000000">PRODUCTOS DE CALIDAD</h5>
-    <br>
-    <br>
-    <br>
+    <!--<h1 style="font-family:Rockwell;color:#000000">Bienvenido a FalsoNike</h1>
+    <h5 style="font-family:Rockwell;color:#000000">PRODUCTOS DE CALIDAD</h5>-->
 </div>
 <!--<div id="carouselExampleFade" class="carousel slide carousel-fade " data-ride="carousel">
     <div class="carousel-inner text-center">
