--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <body>
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="/">
-                <img src="/media/nike.png" alt="" width="30" height="30" class="d-inline-block align-text-top" >
+                <img src="../media/nike.png" alt="" width="30" height="30" class="d-inline-block align-text-top" >
                 <use xlink:href="#profile"></use>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
