--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@ Inicio
 <section class="publicidad">
     <div class="publicidad-banner">
         <a class="publicidad-enlace" href="RegistrarUsuario">
-            <img src="../media/publicidad.jpg" alt="publicidad">
+            <img src="../media/publicidad.jpg" class="img-fluid" alt="publicidad">
         </a>
     </div>
 </section>
@@ -26,7 +26,6 @@ Inicio
             <figure class="proyecto__contenido">
                 <div class="proyecto__imagen">
                     <img src="../media/2.webp" alt="banner3" width="400" height="500">
-
                 </div>
             </figure>
         </li>
@@ -39,10 +38,14 @@ Inicio
         </li>
     </ul>
 </main>
-<div class = "text-center">
+<section class = "contenedor">
+    <h2 class="contenedor__heading">Unete al club y obtenga hasta 6 cuotas sin interés</h2>
     <!--<h1 style="font-family:Rockwell;color:#000000">Bienvenido a FalsoNike</h1>
     <h5 style="font-family:Rockwell;color:#000000">PRODUCTOS DE CALIDAD</h5>-->
-</div>
+        <div class="contenedor__info">
+            <img src="../media/running.jpg" alt="">
+        </div>
+</section>
 
 
 {% endblock %}
