--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,9 @@ Inicio
     <h5 style="font-family:Rockwell;color:#000000">PRODUCTOS DE CALIDAD</h5>-->
         <div class="contenedor__info">
             <img src="../media/running.jpg" alt="">
+            <div class="promocion">
+                <h2>¡Hasta <span>40%</span> off!</h2>
+            </div>
         </div>
 </section>
 
