--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -5,23 +5,46 @@
 {% endblock %}
 {% block contenido %}
     <h3>{{errors}}</h3>
-    <div class="modal-dialog text-center" style="color: rgb(220, 24, 24); left:80px;top:10px;">
-        <div class="col-sm-8">
-            <div class="modal-content" width="100" height="100" style="border:0; background-color:#00000000";>
-                <div class="col-12">
-                    <img src="/media/nike.png" width="100" height="100">
-                    <h5 class="frase_login">TU CUENTA PARA TODO LO RELACIONADO CON NIKE</h5>
-                </div>
-                <form class="col-12" action="" method="POST">
-                    <div class="form-group">
-                            {{form.as_table}}
+    <div class="login__grid text-center">
+    <img src="../../media/nike.png" width="100" height="100" alt="nike">
+        <div class="central__div ">
+            <div class="modal-content form__content" style="border-radius: 1rem;">
+                <div class="form__grid">
+                    <div class="col-12 form__heading">
+                        <h5 class="frase_login">TU CUENTA PARA TODO LO RELACIONADO CON NIKE</h5>
+                        <form class="form" action="" method="POST">
+                            <div class="form-group" style="display: grid;">
+                                    {{form.as_table}}
+                            </div>
+                            {% csrf_token %}
+                            <!--<input class="btn btn-secondary" type="submit", value="Ingresar">-->
+                            <button>
+                                <p>Ingresar</p>
+                                <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="h-6 w-6"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                stroke="currentColor"
+                                stroke-width="4"
+                                >
+                                <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    d="M14 5l7 7m0 0l-7 7m7-7H3"
+                                ></path>
+                                </svg>
+                            </button>
+                        </form>
                     </div>
-                    {% csrf_token %}
-                    <!--<input class="btn btn-secondary" type="submit", value="Ingresar">-->
-                    <button type="submit" class="button">Iniciar Sesion</button>
-                </form>
+                    
+                    <img src="../../media/1.jpg" alt="nike_zapas">
+                </div>
             </div>
         </div>
     </div>
+
+
+    
 {% endblock %}
 </html>
