--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@
                     {% endif %}
                 </ul>
                 <form class="form-inline my-2 my-lg-0" action="/Nike/buscar_productos_indumentarias/" method="GET" >
-                    <input class="form-control mr-sm-2 custom-font" type="text" placeholder="Buscar" aria-label="Search" name='search' >
+                    <input class="form-control mr-sm-2 custom-font" type="text" placeholder="" aria-label="Search" name='search' >
                     <button class="btn btn-outline-success my-2 my-sm-0 color-text custom-font" type="submit">Search</button>
                 </form>
             </div>
@@ -117,16 +117,17 @@
         {% block contenido %}
         {% endblock %}
     </body>
+    <script>
+        const menuActual = window.location.pathname.split("/")[1]; 
+        if (menuActual === "login") {
+            console.log(1);
+            document.body.classList.add("fondo-login");
+        }
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
-    <script>
-        const menuActual = window.location.pathname.split("/")[1]; 
-        if (menuActual === "login") {
-            document.body.classList.add("fondo-login");
-        }
-    </script>
 </html>
